feat: add premium app icons and simplify adaptive icon configuration for Android stable build

--- a/app.json
+++ b/app.json
@@ -14,10 +14,8 @@
     "android": {
       "package": "com.bmoliveira.strive",
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "backgroundColor": "#4F8FF7",
+        "foregroundImage": "./assets/images/android-icon-foreground.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -50,6 +48,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "0fbee111-b6ba-4a55-b601-d7c19a2618d0"
+      }
     }
   }
 }
